fix: h1 size increased on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -561,7 +561,7 @@ body {
 h1, .h1 {
   font-family: "Press Start 2P";
   font-weight: 500;
-  font-size: clamp(2rem, 3.75vw, 3rem);
+  font-size: clamp(2.25rem, 3.75vw, 3rem);
   line-height: 1.1;
 }
 
